[package]
name = "nemo157"
version = "0.1.0"
authors = ["Wim Looman <wim@nemo157.com>"]
description = """
This is a test repository/package for me to try out crates.io features and
integrations without publishing any of my real crates.
"""
license = "WTFPL"
repository = "https://github.com/Nemo157/nemo157-rs"

[dependencies]
